# SJTU-Sing

./: README.en.md  README.md  et --hard HEAD@{2}  pull test
codes/App_frontEnd/android/app/: CMakeLists.txt  build.gradle
codes/App_frontEnd/android/app/jni/: Android.mk  Application.mk  com_kgeapp_rnnoise_RNNoise.h
codes/App_frontEnd/android/app/jni/AECM/: aecm.cpp  com_kgeapp_aecm_jni_AECM.h
codes/App_frontEnd/android/app/jni/RNNoise/: Android.mk  RNNoise.cpp  com_kgeapp_rnnoise_RNNoise.h
codes/App_frontEnd/android/app/jni/Sox/: com_kgeapp_sox_jni_sox.h  sox.cpp
codes/App_frontEnd/android/app/jni/Sox/android/armv8a/lib/: libsox.la
codes/App_frontEnd/android/app/jni/Sox/android/x86-64/lib/: libsox.la
codes/App_frontEnd/android/app/jni/Sox/src/: soxconfig.h
codes/App_frontEnd/android/app/src/debug/java/com/kgeapp/: ReactNativeFlipper.java
codes/App_frontEnd/android/app/src/main/: AndroidManifest.xml
codes/App_frontEnd/android/app/src/main/cpp/: com_kgeapp_oboe_oboe.h  oboe.cpp
codes/App_frontEnd/android/app/src/main/java/com/kgeapp/: AecmModule.java  AudioRecordModule.java  MainActivity.java  MainApplication.java  NSPackage.java  NativePackage.java  NoiseModule.java  SaveAudioModule.java  SoxModule.java
codes/App_frontEnd/android/app/src/main/java/com/kgeapp/aecm/: AECM.java  com_kgeapp_aecm_jni_AECM.h
codes/App_frontEnd/android/app/src/main/java/com/kgeapp/oboe/: oboe.java
codes/App_frontEnd/android/app/src/main/java/com/kgeapp/rnnoise/: RNNoise.java
codes/App_frontEnd/android/app/src/main/java/com/kgeapp/sox/: com_kgeapp_sox_jni_sox.h  (+1 more)
(+424 files in other folders)
